--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Vite App</title>
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-gray-100 dark:bg-black">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
 </body>
